--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header">
         <nav id="nav">
             <h1>Ma<span style="color: #FD6E0A;">r</span>y</h1>
             <ul>
@@ -22,10 +22,17 @@
 
         </nav>
         <div class="banner">
-            <div>
-
+            <div class="bannercontent">
+                <h4 class="bannert1">Hi, I  am</h4>
+                <h1 class="bannert2">Mary Hardy</h1>
+                <p class="bannert3">Shot what able cold new see hold.Friendly as an betrayed formerly <br>he. Morning because as to society behaved moments.</p>
+                <button class="orngbutton2"><a href="">Download CV</a></button>
+                <button class="orngbutton3"><a href="">Contact</a></button>
             </div>
-            
+            <div class="bannerimg">
+                <img src="images/hardy.png" alt="" class="bannerimg1">
+                <!-- <img src="images/header_bg.png" alt="" class="bannerimg2"> -->
+            </div>
         </div>
     </header>
     <main>
