--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
             </div>
 
         </section>
+       <section class="whatido">
+        <h3 class="whatidohead">What I do</h3>
+        <p class="whatidop">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 
+        di
+       </section>
     </main>
     <footer>
           
