--- a/index.html
+++ b/index.html
@@ -64,7 +64,30 @@
         <h3 class="whatidohead">What I do</h3>
         <p class="whatidop">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 
-        di
+        <div class="skillset">
+            <div class="skill">
+                <img src="images/icons/js.png" alt="" class="skillimg">
+                <h4>Vanilla JavaScript</h4>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/react.png" alt="" class="skillimg">
+                <h4>React</h4>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="" class="skillimg">
+                <h4>Node.js</h4>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/mongo.png" alt="" class="skillimg">
+                <h4>MongoDB</h4>
+                <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+       </section>
+       <section class="resume">
        </section>
     </main>
     <footer>
